<resources>
    <string name="app_name">Stawika</string>
    <string name="mobile_phone">MOBILE PHONE</string>
    <string name="_254">+254</string>
    <string name="pin">PIN</string>
    <string name="i_agree_with">I agree with</string>
    <string name="terms_amp_conditions"><![CDATA[Terms &Conditions]]></string>
    <string name="signup_content_desc">Enter phone number first.Then we will send confirmation SMS to proceed.</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="Dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="_254_hint">+254 </string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="sign_in">Sign In</string>
    <string name="logo">Logo</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="terms_condition"><![CDATA[I agree with Terms & Conditions]]></string>
    <string name="proceed">CONTINUE</string>
    <string name="pin_reset">Forgot your PIN code? Please enter email and we will send password to reset your PIN </string>
    <string name="email">Email</string>
    <string name="code">Please enter code from the SMS that we sent to your phone</string>
    <string name="code1">CODE</string>
    <string name="reset_pin">RESET PIN</string>
    <string name="your_credit_score">YOUR CREDIT SCORE</string>
    <string name="register">Complete your registration by adding additional required information below</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="id">ID</string>
    <string name="dob">DOB</string>
    <string name="education_level">EDUCATION LEVEL</string>
    <string name="terms"><![CDATA[I agree with Terms & Condition]]></string>
    <string name="secong_name">SECONG NAME</string>
    <string name="average_income">AVERAGE INCOME</string>
    <string name="other_info">OTHER INFO</string>
    <string name="code_title">CODE</string>
    <string name="didn_t_receive_sms">Didn\'t receive SMS?</string>
    <string name="thank_you">THANK YOU</string>
    <string name="enter_code">Please enter code from SMS that was sent to your phone</string>
    <string name="resend">Resend</string>
    <string name="other_names">OTHER NAMES</string>
    <string name="next_of_kn_phone_no">NEXT OF KN PHONE NO.</string>
    <string name="employment">EMPLOYMENT</string>
    <string name="income_band">INCOME BAND</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">SAVE</string>
    <string name="next_of_kin">NEXT OF KIN</string>
    <string name="confirm_pin">CONFIRM PIN</string>
    <string name="gender">GENDER</string>
    <string name="education">EDUCATION LEVEL</string>
    <string name="rental">RENTAL</string>
    <string name="marital_status">MARITAL STATUS</string>
    <string name="welcome">WELCOME</string>
    <string name="your_loan_balance">YOUR LOAN BALANCE :</string>
    <string name="_2_050">100,000</string>
    <string name="repay">REPAY</string>
    <string name="your_wallet_balance">YOUR WALLET BALANCE</string>
    <string name="kes">KES</string>
    <string name="start_lend">START LEND</string>
    <string name="repayment_schedule">REPAYMENT SCHEDULE:</string>
    <string name="due_date">DUE DATE</string>
    <string name="installment">INSTALLMENT</string>
    <string name="balance">BALANCE</string>
    <string name="jun_7_n_thursday">Jun 7\nThursday</string>
    <string name="_650_kes">650 KES</string>
    <string name="overview">Overview</string>
    <string name="borrowers">Borrowers</string>
    <string name="profile">Profile</string>
    <string name="_599">599</string>
    <string name="full_name">Full Name</string>
    <string name="_254726100423">+254726100423</string>
    <string name="high_school_name">HIGH SCHOOL NAME</string>
    <string name="single">Single</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="_0">0</string>
    <string name="last_transactions">LAST TRANSACTIONS</string>
    <string name="no_activity">NO ACTIVITY</string>
    <string name="noactivitydescription">Currently you have no transaction history. Start loan or top up your wallet balance</string>
    <string name="your_loan_limit">YOUR LOAN LIMIT</string>
    <string name="startloan">REQUEST LOAN</string>
    <string name="top_up">Top UP</string>
    <string name="schedule">Please choose repayment shedule accepted to you</string>
    <string name="_21_days">21 DAYS</string>E
    <string name="_30_days">30 DAYS</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_amount_in_multiple_of_100">Enter amount in multiple of 100</string>
    <string name="cancel">CANCEL</string>
    <string name="descpription">DESCPRIPTION</string>
    <string name="info">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, b ut also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="loan_details">Loan Details</string>
    <string name="june_7">June 7</string>
    <string name="accept">ACCEPT</string>


</resources>
