<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".Registration">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_container"
            android:layout_centerInParent="true"
            android:background="@drawable/rounded_corner">
            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:layout_below="@+id/register">
            <LinearLayout
                android:id="@+id/main_container"
                android:layout_below="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/firstname"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textColor="#bdc6cf"/>

                <EditText
                    android:id="@+id/enter_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

                <TextView
                    android:id="@+id/second_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/last_name"/>
                <EditText
                    android:id="@+id/enter_secondname"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/id"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:text="@string/id"
                    android:textColor="#bdc6cf"/>
                <EditText
                    android:id="@+id/enter_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_phone"
                    android:textStyle="bold"
                    android:textColor="#bdc6cf"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/_254"/>
                <TextView
                    android:id="@+id/dob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#bdc6cf"
                    android:text="@string/dob"/>

                <EditText
                    android:id="@+id/enter_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></Spinner>
                <TextView
                    android:id="@+id/avg_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/average_income"
                    android:textStyle="bold"
                    android:textColor="#bdc6cf"/>
                <EditText
                    android:id="@+id/enter_avg_income"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
                <TextView
                    android:id="@+id/other_info"
                    android:text="@string/other_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#bdc6cf"/>
                <EditText
                    android:id="@+id/more_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textLongMessage"/>
                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/btn_sign_in"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:text="@string/terms"
                    android:textColor="#225683"
                    android:textSize="12sp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/btn_sign_in"
                    android:layout_width="253dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/button_rounded_conner"
                    android:text="@string/sign_in"
                    android:textColor="@color/white" />




            </LinearLayout>

            </ScrollView>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/bottom_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dont_have_an_account"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="signUp"
                android:text="@string/sign_up"
                android:textColor="@color/color_orange"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>