<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_container"
            android:layout_centerInParent="true"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="-12dp"

            android:background="@drawable/rounded_corner">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="45dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/ic_logo_top" />

            <LinearLayout
                android:id="@+id/top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="50dp"
                android:layout_centerInParent="true">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:hint="@string/phone_number"
                        android:inputType="number"
                        android:textColor="#bdc6cf" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/pin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pin"
                        android:inputType="numberPassword"
                        android:textColor="#bdc6cf" />
                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_pin"
                    android:layout_gravity="right"
                    android:textColor="@color/blue"
                    android:layout_margin="2dp"
                    android:clickable="true"
                    android:onClick="resetPin"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_sign_in"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">


                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/btn_sign_in"
                    android:text="@string/i_agree_with"
                    android:textColor="#bdc6cf"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/btn_sign_in"
                    android:text="@string/terms_amp_conditions"
                    android:textColor="@color/blue" />
                <!--android:text="@string/terms"-->
            </LinearLayout>

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="253dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_rounded_conner"
                android:onClick="launchProfile"
                android:text="@string/sign_in"
                android:textColor="@color/white" />


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/bottom_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dont_have_an_account"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="signUp"
                android:text="@string/sign_up"
                android:textColor="@color/color_orange"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>