<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".activities.RegistrationActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_container"
            android:layout_centerInParent="true"
            android:background="@drawable/rounded_corner">

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/blue" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="50dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <LinearLayout
                        android:id="@+id/main_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/register"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/education" />

                        <Spinner
                            android:id="@+id/educationLevel"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="5dp"
                            android:spinnerMode="dropdown" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/employment" />


                        <Spinner
                            android:id="@+id/spCompany"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="5dp"
                            android:spinnerMode="dropdown" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/average_income" />

                        <Spinner
                            android:id="@+id/averageIncome"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="5dp"
                            android:spinnerMode="dropdown" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rental" />

                        <Spinner
                            android:id="@+id/rental"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="5dp"
                            android:spinnerMode="dropdown" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/marital_status" />

                        <Spinner
                            android:id="@+id/maritalStatus"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="5dp"
                            android:spinnerMode="dropdown" />

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">


                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/next_of_kin"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/next_of_kin"
                                android:inputType="text"
                                android:textColor="#bdc6cf" />
                        </android.support.design.widget.TextInputLayout>


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/nextOfkinphone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/next_of_kn_phone_no"
                                android:inputType="phone"
                                android:textColor="#bdc6cf" />
                        </android.support.design.widget.TextInputLayout>


                        <CheckBox
                            android:id="@+id/checkBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_above="@id/btn_sign_in"
                            android:layout_centerHorizontal="true"
                            android:layout_margin="10dp"
                            android:text="@string/terms"
                            android:textColor="#225683"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btn_save"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/button_rounded_conner"
                            android:onClick="redirectTologin"
                            android:text="@string/save"
                            android:textColor="@color/white" />


                    </LinearLayout>


                </LinearLayout>
            </ScrollView>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/bottom_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="signIn"
                android:text="@string/sign_in"
                android:textColor="@color/color_orange"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>